<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ec.edu.uce.controlador.RegistroEstudiante">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/fondo2" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#D8E4D3D3"
        android:gravity="center"
        android:orientation="vertical"/>
    <TextView
        android:id="@+id/txtMensaje"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        android:text="No hay conexión a Internet"
        android:textColor="#111"
        android:textSize="10sp" />


    <TextView
        android:id="@+id/textLista"
        android:layout_width="256dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="49dp"
        android:text="Registrar Estudiante"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:textSize="23dp"
        android:textStyle="bold" />

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="569dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="91dp"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="71dp">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textViewNombre"
                    android:layout_width="106dp"
                    android:layout_height="wrap_content"
                    android:text="@string/txtView_nombre"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/txtNombre"
                    android:hint="@string/txtNombre"
                    android:inputType="textPersonName"
                    android:textSize="14sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textViewApellido"
                    android:text="@string/txtView_apellido"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/txtApellido"
                    android:hint="@string/txtApellido"
                    android:inputType="textPersonName"
                    android:textSize="14sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textViewEmail"
                    android:text="@string/txtView_email"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/txtEmail"
                    android:hint="@string/txtEmail"
                    android:inputType="textEmailAddress"
                    android:textSize="14sp" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textViewCelular"
                    android:text="@string/txtView_celular"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/txtCelular"
                    android:hint="@string/txtCelular"
                    android:inputType="phone"
                    android:textSize="14sp" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="61dp">

                <TextView
                    android:id="@+id/textViewGenero"
                    android:layout_width="120dp"
                    android:layout_height="match_parent"
                    android:text="@string/txtView_Genero"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <RadioGroup
                    android:id="@+id/radioGroup2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/rbHombre"
                        android:layout_width="86dp"
                        android:layout_height="wrap_content"

                        android:text="@string/rb2_hombre"
                        android:textSize="12sp" />

                    <RadioButton
                        android:id="@+id/rbMujer"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/rb1_mujer"
                        android:textSize="12sp" />
                </RadioGroup>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="45dp">

                <TextView
                    android:id="@+id/textViewFechaN"
                    android:layout_width="111dp"
                    android:layout_height="match_parent"
                    android:text="@string/txtView_fechaNacimiento"
                    android:textSize="14sp"
                    android:textStyle="bold" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <TextView
                    android:id="@+id/txtFecha"
                    android:layout_width="179dp"
                    android:layout_height="match_parent"
                    android:text="Selecccione la Fecha" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textViewAsignaturas"

                    android:layout_width="115dp"
                    android:layout_height="match_parent"
                    android:text="@string/txtView_Asignaturas"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                </LinearLayout>

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/cbcProgra"
                        android:layout_width="60dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/cbcProgramacion"
                        android:textSize="13sp" />

                    <CheckBox
                        android:id="@+id/cbcAnalisis"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/cbcAnálisis"
                        android:textSize="13sp"
                        android:layout_weight="1"
                        />
                </LinearLayout>

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/cbcFisica"
                        android:layout_width="50dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/cbcFísica"
                        android:textSize="13sp" />

                    <CheckBox
                        android:id="@+id/cbcIngles"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/cbcInglés"
                        android:textSize="13sp"
                        android:layout_weight="1"
                        />
                </LinearLayout>

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/cbcCiencias"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/cbcCiencias"
                        android:textSize="13sp" />

                    <CheckBox
                        android:id="@+id/cbcLenguaje"
                        android:layout_width="99dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/cbcLenguaje"
                        android:textSize="13sp" />
                </LinearLayout>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="47dp">

                <Switch
                    android:id="@+id/swtBecado"
                    android:layout_width="134dp"
                    android:layout_height="wrap_content"
                    android:text="@string/txtView_Becado"
                    android:textSize="14sp"
                    android:textStyle="bold" />

            </TableRow>

            <TableRow
                android:layout_width="342dp"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/btnGuardar"
                    android:layout_width="281dp"
                    android:layout_height="wrap_content"
                    android:layout_span="3"
                    android:background="@drawable/button_relleno_redondo"
                    android:text="Registrar "
                    android:textColor="@color/colorLabel"
                    android:textSize="14dp"
                    android:textStyle="bold" />
                />
            </TableRow>

        </TableLayout>
    </ScrollView>

    <TextView
        android:layout_width="207dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="23dp"
        android:text="@string/txtView_desarrollado"
        android:textAlignment="center"

        />
</RelativeLayout>